force-app/main/default/objects/RH_Stagiaire__c/RH_Stagiaire__c.object-meta.xml
<CustomObject>
    <label>Stagiaire</label>
    <nameField>
        <label>Stagiaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stagiaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>