force-app/main/default/objects/RH_Stagiaire__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>